# trustvault

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile.api  Dockerfile.worker  alembic.ini  pyproject.toml
backend/config/: licence.example.json
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_trustvault_schema.py  47e0f89d5d21_initial_trustvault_schema.py
backend/src/trustvault/: __init__.py  settings.py
backend/src/trustvault/ai/: base.py  lm_studio.py  none.py
backend/src/trustvault/api/: dependencies.py  main.py  query_summary_patch.py
backend/src/trustvault/audit/: events.py  logger.py
backend/src/trustvault/auth/: dependencies.py  local_auth.py  models.py  permissions.py
backend/src/trustvault/core/: __init__.py  app_settings.py  auto_ingestion.py  container_builder.py  container_normalisation.py  container_status.py  document_classification.py  evidence_preview.py  export_pack.py  feature_services.py  fits_reader.py  hashing.py  ingestion.py  integrity.py  query_interpreter.py  search.py  source_folder_ingestion.py  storage_uri.py
backend/src/trustvault/db/: bootstrap.py  models.py  session.py
backend/src/trustvault/licensing/: __init__.py  dependencies.py  models.py  validator.py
backend/src/trustvault/ocr/: base.py  none.py  tesseract.py
backend/src/trustvault/queue/: azure_service_bus.py  base.py  factory.py  sqs.py
backend/src/trustvault/storage/: __init__.py  azure_blob.py  base.py  factory.py  s3.py  (+1 more)
backend/tests/: test_document_classification.py  test_search_regression_contract.py
(+80 files in other folders)
